GPII-364, GPII-365: Created "Add contrast" adjusters for PCP. Only contrastTheme is different. PMT version extends PCP's with preview. Small styling fix.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -970,7 +970,7 @@ input:checked + label > div > label > .gpii-iconCheckAdjusterCheckIcon:before {
 }
 
 .gpii-contrast-contrastOptions {
-	display: inline-block;
+	display: block;
 }
 
 /*
